<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.okorkut.ik</groupId>
  <artifactId>IKApp</artifactId>
  <version>v1.0</version>
  <packaging>pom</packaging>
  <modules>
  	<module>IKAppConfiguration</module>
  	<module>IKAppWeb</module>
  	<module>IKAppCommon</module>
  	
  </modules>
  
    <properties>
  		<!--  Main Project Properties -->
        <encoding>UTF-8</encoding>
        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <maven.ear.duplicateArtifactsBreakTheBuild>true</maven.ear.duplicateArtifactsBreakTheBuild>
        <skipITs>true</skipITs>
        
        
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.java.version>1.7</project.java.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<buildDate>${maven.build.timestamp}</buildDate>
		
		<!-- plugin versions -->
        <maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <maven-ear-plugin.version>2.10.1</maven-ear-plugin.version>
        <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
		
		<!-- Dependency Specific Properties -->
		<cxf.version>3.1.3</cxf.version>
		<log4j.version>1.2.17</log4j.version>
		<log4j2.version>2.7</log4j2.version>
		
		<!-- <spring.version>4.3.4.RELEASE</spring.version>
		<springmvc>4.1.4.RELEASE</springmvc> -->
		
		<spring.version>4.1.4.RELEASE</spring.version>
		<springmvc>4.1.4.RELEASE</springmvc>
		<springframework.version>4.0.1.RELEASE</springframework.version>
		<!-- JSON Dependencies -->
		<jackson.version>2.8.5</jackson.version>
		<gson.version>2.8.0</gson.version>
		
		<hibernate.version>4.3.6.Final</hibernate.version>
		
		<!-- Tomcat 7/8 Configuration see Maven profiles below -->
		<tomcat.local.url>http://localhost:8090/manager/text</tomcat.local.url>
		<tomcat.remote.url>http://ip:8090/manager/text</tomcat.remote.url>
		<tomcat.deploy.context.path>/appik</tomcat.deploy.context.path>
		<tomcat.username>tomcat</tomcat.username>
		<tomcat.password>tomcat</tomcat.password>
		
		<!-- IK Configuration Dirs  -->
		<global.configuration.dir>${basedir}/../IKAppConfiguration/Configuration/GlobalConf</global.configuration.dir>
		
		<remote.configuration.dir>${basedir}/../IKAppConfiguration/Configuration/RemoteConf</remote.configuration.dir>
    	<local.configuration.dir>${basedir}/../IKAppConfiguration/Configuration/LocalConf</local.configuration.dir>
    	
		<version.configuration.dir>${basedir}/../IKAppConfiguration/Configuration/Version</version.configuration.dir>
		
		<spring.configuration.dir>${basedir}/../IKAppConfiguration/Spring</spring.configuration.dir>
		<spring.IKAppCommon.configuration.dir>${basedir}/../IKAppCommon/Resources/Spring</spring.IKAppCommon.configuration.dir>
		<spring.IKAppWeb.configuration.dir>${basedir}/../IKAppWeb/Resources/Spring</spring.IKAppWeb.configuration.dir>
		
		
		
  </properties>
  
  <profiles>
  	<!-- This profile is for local tomcat deployment -->
        <profile>
            <id>Local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
            	<tomcat.manager.url>${tomcat.local.url}</tomcat.manager.url>
            	<configuration.dir>${local.configuration.dir}</configuration.dir>
            </properties>
        </profile>
       
         <profile>
            <id>Remote</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
            	<tomcat.manager.url>${tomcat.remote.url}</tomcat.manager.url>
            	<configuration.dir>${remote.configuration.dir}</configuration.dir>
            </properties>
        </profile>
    </profiles>
    
    
    <build>
    
    	<!-- Specify Java version of the project -->
    
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>${project.java.version}</source>
						<target>${project.java.version}</target>
					</configuration>
				</plugin>
				
				<plugin>
	                <artifactId>maven-failsafe-plugin</artifactId>
	                <version>${maven-failsafe-plugin.version}</version>
	                <executions>
	                    <execution>
	                        <id>integration-test</id>
	                        <goals>
	                            <goal>integration-test</goal>
	                        </goals>
	                    </execution>
	                    <execution>
	                        <id>verify</id>
	                        <goals>
	                            <goal>verify</goal>
	                        </goals>
	                    </execution>
	                </executions>
                 </plugin>
             
	            <!--  <plugin>
			        <artifactId>maven-ear-plugin</artifactId>
			        <version>${maven-ear-plugin.version}</version>
			        
			         <configuration>
	                      <fileNameMapping>no-version</fileNameMapping>
	                      <version>7</version>
	                      <defaultLibBundleDir>lib</defaultLibBundleDir>
	                      <libraryDirectoryMode>NONE</libraryDirectoryMode>
	                  </configuration>
			     </plugin> -->
			</plugins>
		</pluginManagement>
		
		<plugins>

			<!-- Tomcat Deployment Plugin -->
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<path>${tomcat.deploy.context.path}</path>
					<update>true</update>
					<url>${tomcat.manager.url}</url>
					<username>${tomcat.username}</username>
					<password>${tomcat.password}</password>
					<systemProperties>
						<JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent
							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
					</systemProperties>
				</configuration>
			</plugin>
			
			
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-war-plugin</artifactId>
		        <version>2.6</version>
		        <configuration>
		        </configuration>
		      </plugin>
			
			<!-- Skip unit tests during build operation -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
		</plugins>
		
		
		
     </build>
     
     
       <dependencies>

		<!-- log4j -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
			<!-- <exclusions>
				<exclusion>
					<artifactId>slf4j-api</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions> -->
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		
		<!-- Log4j2 -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>${log4j2.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>${log4j2.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.21</version>
		</dependency>
		
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-jdk14</artifactId>
		    <version>1.7.21</version>
		</dependency>
		
		
		
		

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.5</version>
		</dependency>
		
		<!-- velocity -->
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity-tools</artifactId>
			<version>2.0</version>
		</dependency>


		<!-- Testing -->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		
		
		

	</dependencies>
     
     
     <scm>
        <connection>scm:svn:http://127.0.0.1/dummy</connection>
        <developerConnection>scm:svn:https://127.0.0.1/dummy</developerConnection>
        <tag>HEAD</tag>
        <url>http://127.0.0.1/dummy</url>
    </scm>
	
</project>